--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "inquirer-directory": "2.2.0",
     "jest-styled-components": "7.0.3",
     "lint-staged": "10.3.0",
+    "mapbox-gl": "2.2.0",
     "node-plop": "0.26.2",
     "plop": "2.7.4",
     "prettier": "2.1.1",
