--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lint-staged": "10.3.0",
     "mapbox-gl": "2.2.0",
     "node-plop": "0.26.2",
+    "numeral": "2.0.6",
     "plop": "2.7.4",
     "prettier": "2.1.1",
     "react": "16.13.1",
