--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-firebase/auth": "0.2.10",
     "@reduxjs/toolkit": "1.5.1",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.0.2",
@@ -25,6 +26,7 @@
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react-hooks": "4.1.0",
+    "firebase": "8.6.1",
     "fontfaceobserver": "2.1.0",
     "husky": "4.2.5",
     "i18next": "19.7.0",
@@ -48,6 +50,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "react-test-renderer": "16.13.1",
+    "react-with-firebase-auth": "1.3.2",
     "redux-injectors": "1.3.0",
     "redux-saga": "1.1.3",
     "rimraf": "3.0.2",
