--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/testing-library__jest-dom": "5.9.2",
     "@types/webpack": "4.41.22",
     "@types/webpack-env": "1.15.2",
+    "baseui": "9.115.2",
     "chalk": "4.1.0",
     "cross-env": "7.0.2",
     "eslint-config-prettier": "6.11.0",
@@ -62,6 +63,8 @@
     "stylelint-config-recommended": "3.0.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
+    "styletron-engine-atomic": "1.4.8",
+    "styletron-react": "6.0.1",
     "swiper": "6.6.1",
     "ts-node": "9.0.0",
     "typescript": "4.1.3",
