--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "i18next-scanner": "2.11.0",
     "inquirer": "7.3.3",
     "inquirer-directory": "2.2.0",
+    "install": "0.13.0",
     "jest-styled-components": "7.0.3",
     "lint-staged": "10.3.0",
     "mapbox-gl": "2.2.0",
     "node-plop": "0.26.2",
+    "npm": "7.14.0",
     "numeral": "2.0.6",
     "plop": "2.7.4",
     "prettier": "2.1.1",
@@ -65,6 +67,7 @@
     "stylelint-processor-styled-components": "1.10.0",
     "styletron-engine-atomic": "1.4.8",
     "styletron-react": "6.0.1",
+    "sweetalert2": "11.0.9",
     "swiper": "6.6.1",
     "ts-node": "9.0.0",
     "typescript": "4.1.3",
