--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "prettier": "2.1.1",
     "react": "16.13.1",
     "react-app-polyfill": "1.0.6",
+    "react-circular-progressbar": "2.0.4",
     "react-dom": "16.13.1",
     "react-helmet-async": "1.0.6",
     "react-i18next": "11.7.2",
