--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "react-dom": "16.13.1",
     "react-helmet-async": "1.0.6",
     "react-i18next": "11.7.2",
-    "react-map-gl": "6.1.15",
+    "react-map-gl": "5.2.11",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
@@ -74,7 +74,8 @@
     "swiper": "6.6.1",
     "ts-node": "9.0.0",
     "typescript": "4.1.3",
-    "web-vitals": "0.2.4"
+    "web-vitals": "0.2.4",
+    "worker-loader": "3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
